tests/snapshots/run_wpt_conformance__coreml_reduceL1_float32_0D_constant_tensor_empty_axes.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
reduce_l1.https.any.js reduceL1 float32 0D constant tensor empty axes, coreml
 Failed to build graph: coreml runtime failed: MLModel compile failed: Failed to parse the model specification. Error: Unable to parse ML Program: in operation of type reduce_l1_norm: Param 'x' has incorrect type for operator 'ios16.reduce_l1_norm'. Expected { tensor<fp16, [?, ...]>, tensor<fp32, [?, ...]>, tensor<int32, [?, ...]> }; got fp32.

--- built graph ---
webnn_graph "graph" v2 {
  consts {
    operand_0: f32[] @bytes([78, 72, 176, 64]);
  }

  nodes {
    [reduceL1Output] = reduceL1(operand_0, axes=[], keepDimensions=false, label="");
  }

  outputs { reduceL1Output; }
}
