tests/snapshots/run_wpt_conformance__coreml_reduceL1_float32_3D_tensor_options_axes.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
reduce_l1.https.any.js reduceL1 float32 3D tensor options.axes, coreml
 Failed to dispatch graph: coreml runtime failed: prediction failed: According to model description, feature 'reduceL1Input' must be of rank 4, instead got a multi-array value of rank 3.

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    reduceL1Input: f32[2, 3, 4];
  }

  nodes {
    [reduceL1Output] = reduceL1(reduceL1Input, axes=[2], keepDimensions=false, label="");
  }

  outputs { reduceL1Output; }
}
