tests/snapshots/run_wpt_conformance__coreml_reduceL1_uint32_4D_tensor_options_axes_with_options_keepDimensions_false.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
reduce_l1.https.any.js reduceL1 uint32 4D tensor options.axes with options.keepDimensions=false, coreml
 Failed to build graph: coreml runtime failed: MLModel compile failed: Failed to parse the model specification. Error: Unable to parse ML Program: in operation of type cast: Output '0' has incorrect type for operator 'ios17.cast'. Expected { tensor<fp32, [...]>, tensor<fp16, [...]>, tensor<uint16, [...]>, tensor<uint8, [...]>, tensor<int32, [...]>, tensor<int16, [...]>, tensor<int8, [...]>, tensor<bool, [...]> }; got tensor<uint32, [2, 2, 2, 3]>.

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    reduceL1Input: u32[2, 2, 2, 3];
  }

  nodes {
    [reduceL1Output] = reduceL1(reduceL1Input, axes=[0, 2], keepDimensions=false, label="");
  }

  outputs { reduceL1Output; }
}
