tests/snapshots/run_wpt_conformance__coreml_reduceL2_float32_0D_tensor_empty_axes.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
reduce_l2.https.any.js reduceL2 float32 0D tensor empty axes, coreml
 Failed to build graph: coreml runtime failed: MLModel compile failed: Failed to parse the model specification. Error: Unable to parse ML Program: in operation of type reduce_l2_norm: Param 'x' has incorrect type for operator 'ios16.reduce_l2_norm'. Expected { tensor<fp32, [?, ...]>, tensor<fp16, [?, ...]>, tensor<int32, [?, ...]> }; got fp32.

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    reduceL2Input: f32[];
  }

  nodes {
    [reduceL2Output] = reduceL2(reduceL2Input, axes=[], keepDimensions=false, label="");
  }

  outputs { reduceL2Output; }
}
